--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "client": "cd client && npm start",
+    "server": "nodemon server.js",
+    "start": "concurrently \"npm run client\" \"npm run server\"",
     "dev": "nodemon server.js"
   },
   "keywords": [],
@@ -20,6 +22,7 @@
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.1",
+    "node-cron": "^2.0.3",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
