--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^5.4.1",
     "node-cron": "^2.0.3",
     "qs": "^6.6.0",
+    "request": "^2.88.0",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
